--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -190,14 +190,13 @@
             <a
                 id="community-boundary-continue-btn"
                 class="primary-btn action-btn disabled-btn margin-right-8"
-                href="{% url 'confirm-community' %}"
-                onclick="event.preventDefault()"
+                onclick="setBoundary()"
             >
                 Change Boundary
             </a>
         </div>
         <div id="skip-this-step">
-            <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Cancel</a>
+            <a class="primary-btn white-btn" >Cancel</a>
         </div>
     </div>
 </span>
@@ -312,29 +311,6 @@
         self.closest('.boundary-selection-unit').querySelector('.shapefile-input').click()
     }
 
-    async function setBoundary(boundaryName, boundary, removePreexisting=true) {
-    const payload = {
-        source: 'shape-file',
-        name: boundaryName,
-        boundary: boundary,
-        remove_previous: removePreexisting
-    }
-
-    // do post call to set boundary in request
-    const registrationResponse = await fetch("{% url 'registration-boundary' %}", {
-            method: 'POST',
-            body: JSON.stringify(payload),
-            headers: {
-              'X-CSRFToken': '{{csrf_token}}'
-            }
-        })
-
-        if (registrationResponse.status !== 201) {
-            throw new Error('Error Setting boundary')
-        }
-
-    }
-
     async function uploadShapeFileData(self) {
         var files = event.target.files
         var file = files[0]
@@ -407,5 +383,24 @@
         return false
     }
 
+    async function setBoundary() {
+        // do post call to set boundary in request
+        const response = await fetch("{% url 'update-community-boundary-data' community.id %}", {
+            method: 'POST',
+            body: JSON.stringify(BoundaryPayLoad),
+            headers: {
+              'X-CSRFToken': '{{csrf_token}}'
+            }
+        })
+
+        if (response.status !== 204) {
+            const message = 'Error Changing Boundary'
+            alert(message)
+            throw new Error(message)
+        }
+
+       // reload page
+       location.reload()
+    }
 </script>
 <script src="{% static 'javascript/shpjs.js' %}"></script>
