feat: created fix for template bug when community_id is not defined

--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -141,6 +141,7 @@
                 <label class="pad-top-1-5">Selected Location</label>
             </strong><br>
 
+            {% if community_id %}
             <div id="selected-title-wrapper">
                 <div id="selected-title">Placeholder</div>
                 <a id="nld-link"
@@ -150,6 +151,7 @@
                     <i class="fa fa-arrow-up-right-from-square"></i>
                 </a>
             </div>
+            {% endif %}
 
         </div>
 
