feat: changed wording from "Change Boundary" to "Update Boundary"

--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -206,7 +206,7 @@
                 class="primary-btn action-btn disabled-btn margin-right-8"
                 onclick="setBoundary(this)"
             >
-                Change Boundary
+                Update Boundary
             </a>
         </div>
         <div>
