--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="dashcard show">
+<div class="dashcard">
   <div class="flex-this">
     <div class="researcher-img-container">
       <img
@@ -29,54 +29,56 @@
     </div>
 
     <div class="dashcard-btn-container">
-      <div class="margin-left-16 flex-this gap-1">
-        {% if '/registry/' in request.path %}
-        <div class="margin-bottom-16">
-          <a
-            class="primary-btn action-btn"
-            href="{% url 'public-researcher' researcher.id %}"
-            >View public page</a
-          >
-        </div>
-        {% if researcher.otc_researcher_url.all %}
-        <div class="flex-this flex-end">
-          <img
-            class="pointer-event-none"
-            src="{% static 'images/notices/ci-open-to-collaborate.png' %}"
-            width="60px"
-            alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle. "
-          />
-        </div>
-        {% endif %} {% endif %}
 
-        <div class="margin-right-8">
+      <div class="flex-this gap-half">
+        {% if '/registry/' in request.path %}
+            <div>
+                <div class="margin-bottom-16">
+                    <a 
+                        class="primary-btn action-btn"
+                        href="{% url 'public-researcher' researcher.id %}"                    
+                    >View public page</a>                        
+                </div>
+                {% if researcher.otc_researcher_url.all %}
+                    <div class="flex-this flex-end">
+                        <img class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="60px" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle.">
+                    </div>
+                {% endif %}
+            </div>
+        {% endif %}
+
+        <div>
           {% if '/dashboard/' in request.path %} {% if researcher.get_projects %}
-          <a
-            class="primary-btn action-btn"
-            href="{% url 'researcher-projects' researcher.id %}"
-            >View account</a
-          >
+              <a
+                class="primary-btn action-btn"
+                href="{% url 'researcher-projects' researcher.id %}"
+                >View account</a
+              >
           {% else %}
-          <a
-            class="primary-btn action-btn"
-            href="{% url 'researcher-notices' researcher.id %}"
-            >View account</a
-          >
+              <a
+                class="primary-btn action-btn"
+                href="{% url 'researcher-notices' researcher.id %}"
+                >View account</a
+              >
           {% endif %} {% endif %}
         </div>
         {% if '/dashboard/' in request.path %}
-        <!-- Notification -->
-        {% include 'snippets/notifications.html' with scope=researcher.id %}
-        <!-- Settings -->
-        <div>
-          <a
-            href="{% url 'update-researcher' researcher.id %}"
-            class="border-raduis50 darkteal-text primary-btn white-btn"
-            ><i class="no-margin fa fa-cog" aria-hidden="true"></i
-          ></a>
-        </div>
+          <div class="margin-left-8 flex-this gap-half">
+              <!-- Notification -->
+              {% include 'snippets/notifications.html' with scope=researcher.id %}
+              <!-- Settings -->
+              <div>
+                <a
+                  href="{% url 'update-researcher' researcher.id %}"
+                  class="round-btn-small darkteal-text primary-btn white-btn"
+                  ><i class="no-margin fa fa-cog" aria-hidden="true"></i
+                ></a>
+              </div>          
+          </div>
         {% endif %}
       </div>
+
     </div>
+
   </div>
 </div>
