--- a/localcontexts/static/css/dashboard.css
+++ b/localcontexts/static/css/dashboard.css
@@ -77,7 +77,7 @@
 /* Registry btns on dashcard */
 .dashcard-btn-container {
     display: flex;
-    width: 35%; 
+    min-width: 280px; 
     justify-content: flex-end;  
     font-size: 14px;
     font-weight: bold;
