Added subscription form and template for journey one
Completed backend work on subscription journey one

Added salesforce lead generation

code cleanup

Added changes for the journey 2 of subscription for anonymous user

Added the flow for already present institute accounts on HUB

Improved code quality

Added conditions for journey3

Updated journey 3 and rendering conditions

Added messages for user

integrated end points for salesforce

Updated rendering conditions of unsubscribed account

--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -1665,3 +1665,8 @@ i[data-tooltip]:hover:after {
     z-index:-1; 
     display:none;
 }
+
+.disable{
+    opacity: 0.6;
+    cursor: not-allowed;
+}
