--- a/templates/partials/infocards/_institution-card.html
+++ b/templates/partials/infocards/_institution-card.html
@@ -2,13 +2,15 @@
 <div class="dashcard">
     <div class="flex-this">
         <div class="dashcard-img-container">
+
+        <div class="{% if  institution.is_subscribed %} dashcard-img-container {% else %} dashcard-img-container  disable {%endif%}">
             <img loading="lazy" 
                 class="profile-img" 
                 src="{% if institution.image %} {{ institution.image.url }} {% else %} {% static 'images/placeholders/institution-place.jpg' %}{% endif %}" 
                 alt="{{ institution.institution_name }} image"
             >
         </div>
-        <div class="flex-this column dashcard-text-container">
+        <div class="{% if  institution.is_subscribed %} flex-this column dashcard-text-container {% else %} flex-this column dashcard-text-container  disable {%endif%}">
             <div><h3 class="dashcard-h3 darkteal-text">
                 {{ institution }}
             </h3></div>
