--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -1,4 +1,4 @@
-{% extends 'register-base.html' %} {% block title %} Register {% endblock %} {% load static %} {% block card %}
+{% extends 'register-base.html' %} {% block title %} Select Account {% endblock %} {% load static %} {% block card %}
 
 <div class="flex-this column">
     <div>
@@ -10,7 +10,7 @@
             <div class="account-card margin-right-1">
                 <div class="flex-this">
                     <p><strong>Community Account </strong></p>
-                    <div class="tooltip" style="margin-top: 15px; margin-left: 5px;"><strong>i</strong>
+                    <div class="tooltip margin-top-16 margin-left-8"><strong>i</strong>
                         <span class="tooltiptext">
                             A community entity might be an Indigenous or local community’s Cultural Department; Tribal and Historical Preservation Office; Community Center; Preservation Office; Community Library, Archive, or Museum; Land Council; or Indigenous Rangers.
                         </span>
@@ -19,13 +19,13 @@
                 <div><img loading="lazy" class="tiny-label pointer-event-none" src="{% static 'images/tk-labels/tk-attribution.png' %}" alt="TK Attribution Label icon. Black tag shape with two stacked white arrows, one pointing left and one pointing right."></div>
                 <p><strong>Who?</strong> An Indigenous or local community entity or representative</p>
                 <p class="no-top-margin"><strong>What?</strong> Customize and apply TK and BC Labels, and create Projects</p>
-                <a href="{% url 'connect-community' %}"><div class="primary-btn white-btn-select"><span>Join</span></div></a>
-                <a href="{% url 'prep-community' %}"><div class="primary-btn white-btn-select"><span>Create</span></div></a>
+                <a href="{% url 'connect-community' %}" class="primary-btn white-btn-select">Join</a>
+                <a href="{% url 'prep-community' %}" class="primary-btn white-btn-select">Create</a>
             </div>
             <div class="account-card margin-left-1 margin-right-1">
                 <div class="flex-this">
                     <div><p><strong>Institution Account</strong></p></div>
-                    <div class="tooltip" style="margin-top: 15px; margin-left: 5px;"><strong>i</strong>
+                    <div class="tooltip margin-top-16 margin-left-8"><strong>i</strong>
                         <span class="tooltiptext">An institution might be an archive, library, museum, historical society, gallery, data repository, university, or media production company. If you are an Indigenous institution, choose the community account.</span>
                     </div>
                 </div>
@@ -36,8 +36,8 @@
                 </div>
                 <p><strong>Who?</strong> Cultural or research institution, data repository, and other organizations</p>
                 <p><strong>What?</strong> Create projects and generate Notices</p>
-                <a href="{% url 'connect-institution' %}"><div class="primary-btn white-btn-select"><span>Join</span></div></a>
-                <a href="{% url 'prep-institution' %}"><div class="primary-btn white-btn-select"><span>Create</span></div></a>
+                <a href="{% url 'connect-institution' %}" class="primary-btn white-btn-select">Join</a>
+                <a href="{% url 'prep-institution' %}" class="primary-btn white-btn-select">Create</a>
             </div>
             <div class="account-card margin-left-1">
                 <p><strong>Researcher Account</strong></p>
@@ -47,10 +47,15 @@
                 </div>
                 <p><strong>Who?</strong> An individual who carries out academic or scientific research independently or in an institution </p>
                 <p><strong>What?</strong> Create projects and generate Notices</p>
-                <a href="{% url 'connect-researcher' %}"><div class="primary-btn white-btn-select"><span>Create</span></div></a>
+                <a href="{% url 'connect-researcher' %}" class="primary-btn white-btn-select">Create</a>
             </div>
 
         </div>
+    </div>
+    <div class="margin-top-16">
+        <p>
+            If you received an invitation to join an account, go straight to your <a href="{% url 'dashboard' %}" class="default-a">Profile</a>
+        </p>
     </div>
 </div>
 {% endblock %}
